--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -12,7 +12,7 @@
 <body>
 <div class="com">
     <ul><a href="/home">Home</a></ul>
-    <ul>Restaurants</ul>
+    <ul> <a href="/cafes">Restaurants</a></ul>
     <ul> <a href="/about">About</a> </ul>
     <ul style='transform: translateX(130px) translateY(-30px);' class="ana"><img class="avatar" th:src="${user?.image ?: '/static/media/default.jpg'}" alt="User Image"></ul>
 
