--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,9 +11,10 @@
 <body>
 <div class="com">
     <ul> <a href="/home">Home</a></ul>
-    <ul>Restaurants</ul>
+    <ul> <a href="/cafes">Restaurants</a></ul>
     <ul><a href="/about">About</a></ul>
-    <ul style='transform: translateX(130px) translateY(-30px);' class="ana"><img class="avatar" th:src="${user?.image ?: '/static/media/default.jpg'}" alt="User Image"></ul>
+    <ul><a href="/cart">Cart</a></ul>
+    <ul style='transform: translateX(100px) translateY(-30px);' class="ana"><img class="avatar" th:src="${user?.image ?: '/static/media/default.jpg'}" alt="User Image"></ul>
 </div>
 <div class="text">
     <div class="FreshF">
@@ -46,19 +47,16 @@
 </div>
 <div class="card-carousel">
     <div class="cards" id="card0">
-        <img class="amit" src="/static/media/form-bg.png" alt="">
+        <img class="amit" src="/static/media/cafe1.jpg" alt="">
     </div>
     <div class="cards" id="card1">
-        <img class="amit" src="/static/media/form-bg.png" alt="">
+        <img class="amit" src="/static/media/cafe2.jpg" alt="">
     </div>
     <div class="cards" id="card2">
-        <img class="amit" src="/static/media/form-bg.png" alt="">
+        <img class="amit" src="/static/media/cafe3.jpg" alt="">
     </div>
     <div class="cards" id="card3">
-        <img class="amit" src="/static/media/form-bg.png" alt="">
-    </div>
-    <div class="cards" id="card4">
-        <img class="amit" src="/static/media/form-bg.png" alt="">
+        <img class="amit" src="/static/media/cafe4.jpg" alt="">
     </div>
 </div>
 </div>
